--- a/os_2006.ioc
+++ b/os_2006.ioc
@@ -29,26 +29,29 @@ Mcu.IP2=FREERTOS
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SYS
-Mcu.IP6=USART1
-Mcu.IP7=USART6
-Mcu.IPNb=8
+Mcu.IP6=UART8
+Mcu.IP7=USART1
+Mcu.IP8=USART6
+Mcu.IPNb=9
 Mcu.Name=STM32F427I(G-I)Hx
 Mcu.Package=UFBGA176
-Mcu.Pin0=PG14
-Mcu.Pin1=PB7
-Mcu.Pin10=PE11
-Mcu.Pin11=PE14
-Mcu.Pin12=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin13=VP_SYS_VS_tim9
-Mcu.Pin2=PB6
-Mcu.Pin3=PD0
-Mcu.Pin4=PG9
-Mcu.Pin5=PD1
-Mcu.Pin6=PH0/OSC_IN
-Mcu.Pin7=PH1/OSC_OUT
-Mcu.Pin8=PG2
-Mcu.Pin9=PG1
-Mcu.PinsNb=14
+Mcu.Pin0=PE1
+Mcu.Pin1=PE0
+Mcu.Pin10=PG2
+Mcu.Pin11=PG1
+Mcu.Pin12=PE11
+Mcu.Pin13=PE14
+Mcu.Pin14=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin15=VP_SYS_VS_tim9
+Mcu.Pin2=PG14
+Mcu.Pin3=PB7
+Mcu.Pin4=PB6
+Mcu.Pin5=PD0
+Mcu.Pin6=PG9
+Mcu.Pin7=PD1
+Mcu.Pin8=PH0/OSC_IN
+Mcu.Pin9=PH1/OSC_OUT
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F427IIHx
@@ -85,6 +88,10 @@ PD0.Signal=CAN1_RX
 PD1.Locked=true
 PD1.Mode=Master
 PD1.Signal=CAN1_TX
+PE0.Mode=Asynchronous
+PE0.Signal=UART8_RX
+PE1.Mode=Asynchronous
+PE1.Signal=UART8_TX
 PE11.Locked=true
 PE11.Signal=GPIO_Output
 PE14.Locked=true
@@ -169,6 +176,8 @@ RCC.VCOSAIOutputFreq_Value=98000000
 RCC.VCOSAIOutputFreq_ValueQ=24500000
 RCC.VcooutputI2S=192000000
 RCC.VcooutputI2SQ=192000000
+UART8.IPParameters=VirtualMode
+UART8.VirtualMode=Asynchronous
 USART1.BaudRate=100000
 USART1.IPParameters=VirtualMode,BaudRate,Parity
 USART1.Parity=PARITY_EVEN
